--- a/test-application/pom.xml
+++ b/test-application/pom.xml
@@ -72,6 +72,7 @@
                 <executions>
                     <execution>
                         <id>attach-sources</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>jar</goal>
                         </goals>
